--- a/build.gradle
+++ b/build.gradle
@@ -5,20 +5,17 @@ plugins {
 }
 
 project.group = "de.codeshelf.consoleui"
-//project.version = "0.0.11"
-
-apply plugin: 'mavin-publish'
+project.version = "0.0.10-SNAPSHOT"
 
 java {
     withJavadocJar()
     withSourcesJar()
 }
 
-/*
+
 repositories {
     mavenCentral()
 }
- */
 
 compileJava {
     sourceCompatibility = 1.8
@@ -58,27 +55,23 @@ task printEnv {
     println "username " + sonatypeUsername
 }
 
-artifacts {
-    archives javadocJar, sourcesJar
-}
-
-
 publishing {
     repositories {
-        maven {
+        mavenLocal {
             // change URLs to point to your repos, e.g. http://my.org/repo
             def releasesRepoUrl = "$buildDir/repos/releases"
             def snapshotsRepoUrl = "$buildDir/repos/snapshots"
             url = version.endsWith('SNAPSHOT') ? snapshotsRepoUrl : releasesRepoUrl
-            name = 'mavenTest'
         }
-        maven {
+        mavenCentral {
             // change URLs to point to your repos, e.g. http://my.org/repo
             def releasesRepoUrl = "https://oss.sonatype.org/service/local/staging/deploy/maven2/"
             def snapshotsRepoUrl = "https://oss.sonatype.org/content/repositories/snapshots/"
             url = version.endsWith('SNAPSHOT') ? snapshotsRepoUrl : releasesRepoUrl
-            authentication(userName: sonatypeUsername, password: sonatypePassword)
-            name = 'mavenCentral'
+            credentials {
+                username = sonatypeUsername
+                password = sonatypePassword
+            }
         }
     }
 
@@ -113,7 +106,10 @@ publishing {
     }
 }
 
+/*
 signing {
     sign publishing.publications.consoleUI
 }
 
+
+ */
