--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ plugins {
 }
 
 project.group = "de.codeshelf.consoleui"
-project.version = "0.0.10-SNAPSHOT"
+project.version = "0.0.11"
 
 java {
     withJavadocJar()
