--- a/graal/pom.xml
+++ b/graal/pom.xml
@@ -29,7 +29,11 @@
     <dependencies>
         <dependency>
             <groupId>org.jline</groupId>
-            <artifactId>jline</artifactId>
+            <artifactId>jline-reader</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.jline</groupId>
+            <artifactId>jline-console</artifactId>
         </dependency>
 
         <dependency>
