--- a/terminal-jna/pom.xml
+++ b/terminal-jna/pom.xml
@@ -16,7 +16,7 @@
     <parent>
         <groupId>org.jline</groupId>
         <artifactId>jline-parent</artifactId>
-        <version>3.18.0</version>
+        <version>3.18.1-SNAPSHOT</version>
     </parent>
 
     <artifactId>jline-terminal-jna</artifactId>
