--- a/jline/pom.xml
+++ b/jline/pom.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
 
-    Copyright (c) 2002-2020, the original author or authors.
+    Copyright (c) 2002-2021, the original author or authors.
 
     This software is distributable under the BSD license. See the terms of the
     BSD license in the documentation provided with this software.
@@ -344,6 +344,7 @@
                 <artifactId>maven-bundle-plugin</artifactId>
                 <configuration>
                     <instructions>
+                        <Automatic-Module-Name>${automatic.module.name}</Automatic-Module-Name>
                         <Export-Package>*;-noimport:=true</Export-Package>
                         <Import-Package>
                             com.sun.jna*,
