fix build script missing complain if no command is given
advance no command check,
avoid `shift` error and exit immediately
(caused by bash `-e` option)

--- a/build
+++ b/build
@@ -33,12 +33,13 @@ function mvn {
     ./mvnw $*
 }
 
-command="$1"; shift
-
+command="$1"
 # complain if no command is given
 if [ -z "$command" ]; then
     usage
 fi
+
+shift
 
 case "$command" in
     # change the version of the project
