Nano SystemHighlighter: add theme system

--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -193,7 +193,7 @@
                                 <resource>
                                     <directory>src/main/scripts</directory>
                                     <includes>
-                                        <include>*.nanorc</include>
+                                        <include>*.nanorc*</include>
                                     </includes>
                                 </resource>
                             </resources>
