--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -213,6 +213,7 @@
                                     <includes>
                                         <include>init.jline</include>
                                         <include>data.json</include>
+                                        <include>apply-colors.sh</include>
                                     </includes>
                                 </resource>
                             </resources>
