--- a/curses/pom.xml
+++ b/curses/pom.xml
@@ -16,11 +16,15 @@
     <parent>
         <groupId>org.jline</groupId>
         <artifactId>jline-parent</artifactId>
-        <version>3.7.0-SNAPSHOT</version>
+        <version>3.21.1-SNAPSHOT</version>
     </parent>
 
     <artifactId>jline-curses</artifactId>
     <name>JLine Curses</name>
+
+    <properties>
+        <automatic.module.name>org.jline.curses</automatic.module.name>
+    </properties>
 
     <dependencies>
         <dependency>
