--- a/jline/pom.xml
+++ b/jline/pom.xml
@@ -313,6 +313,9 @@
                                 <include>**/TTop.java</include>
                                 <include>**/ConsoleEngineImpl.java</include>
                             </includes>
+                            <excludes>
+                                <exclude>**/jep424/*.java</exclude>
+                            </excludes>
                             <compilerArgs>
                                 <arg>-Xlint:all,-options</arg>
                                 <arg>-Werror</arg>
@@ -328,12 +331,29 @@
                             <excludes>
                                 <exclude>**/TTop.java</exclude>
                                 <exclude>**/ConsoleEngineImpl.java</exclude>
+                                <exclude>**/jep424/*.java</exclude>
                             </excludes>
                             <compilerArgs>
                                 <arg>-Xlint:all,-options</arg>
                                 <arg>-Werror</arg>
                                 <arg>-profile</arg>
                                 <arg>compact1</arg>
+                            </compilerArgs>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>jdk19</id>
+                        <goals>
+                            <goal>compile</goal>
+                        </goals>
+                        <configuration>
+                            <includes>
+                                <include>**/jep424/*.java</include>
+                            </includes>
+                            <release>19</release>
+                            <compilerArgs>
+                                <arg>-Xlint:all,-options</arg>
+                                <arg>--enable-preview</arg>
                             </compilerArgs>
                         </configuration>
                     </execution>
